fix descrption overflow and price font size

--- a/frontend/src/components/car-card/components/card-base/styles.module.scss
+++ b/frontend/src/components/car-card/components/card-base/styles.module.scss
@@ -94,7 +94,7 @@
   padding: 0;
   color: var(--blue100);
   font-weight: 900;
-  font-size: 22px;
+  font-size: 148%;
   font-style: normal;
   line-height: 25px;
   text-transform: uppercase;
