--- a/frontend/src/components/car-card/components/card-description/styles.module.scss
+++ b/frontend/src/components/car-card/components/card-description/styles.module.scss
@@ -1,8 +1,10 @@
 .carDescription {
+  max-height: 85px;
   margin: 0;
+  overflow: hidden;
   color: var(--gray400);
   font-weight: 400;
-  font-size: 14px;
+  font-size: 90%;
   font-style: normal;
   line-height: 17px;
   opacity: 0.6;
